// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MarkdownBlock
    block={
        Object {
            "fields": Object {
              "backgroundColor": "foo",
              "content": "foo",
              "drip": false,
              "title": "foo",
              "titleLeft": true,
            },
            "sys": Object {
              "contentType": Object {
                "sys": Object {},
              },
              "createdAt": "foo",
              "environment": Object {
                "sys": Object {},
              },
              "id": "foo",
              "locale": "en-US",
              "revision": 3,
              "space": Object {
                "sys": Object {},
              },
              "type": "foo",
              "updatedAt": "foo",
            },
          }
    }
    setRef={[Function]}
    z={0}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="col-12 md-col-4 flex flex-row justify-center"
>
          <span
                    className="block-headline"
          >
                    foo
          </span>
</div>,
        <div
          className="transition-slide-up mx-auto px3 py4 form-container-width markdown-block col-12 md-col-8"
          dangerouslySetInnerHTML={
                    Object {
                              "__html": "<p>foo</p>
                    ",
                            }
          }
/>,
      ],
      "className": "flex justify-center undefined",
      "style": Object {
        "zIndex": 0,
      },
    },
    "ref": [Function],
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <span
            className="block-headline"
>
            foo
</span>,
          "className": "col-12 md-col-4 flex flex-row justify-center",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "foo",
            "className": "block-headline",
          },
          "ref": null,
          "rendered": "foo",
          "type": "span",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "transition-slide-up mx-auto px3 py4 form-container-width markdown-block col-12 md-col-8",
          "dangerouslySetInnerHTML": Object {
            "__html": "<p>foo</p>
",
          },
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="col-12 md-col-4 flex flex-row justify-center"
>
            <span
                        className="block-headline"
            >
                        foo
            </span>
</div>,
          <div
            className="transition-slide-up mx-auto px3 py4 form-container-width markdown-block col-12 md-col-8"
            dangerouslySetInnerHTML={
                        Object {
                                    "__html": "<p>foo</p>
                        ",
                                  }
            }
/>,
        ],
        "className": "flex justify-center undefined",
        "style": Object {
          "zIndex": 0,
        },
      },
      "ref": [Function],
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <span
              className="block-headline"
>
              foo
</span>,
            "className": "col-12 md-col-4 flex flex-row justify-center",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "foo",
              "className": "block-headline",
            },
            "ref": null,
            "rendered": "foo",
            "type": "span",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "transition-slide-up mx-auto px3 py4 form-container-width markdown-block col-12 md-col-8",
            "dangerouslySetInnerHTML": Object {
              "__html": "<p>foo</p>
",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MarkdownBlock
    block={
        Object {
            "fields": Object {
              "backgroudColor": "white",
              "content": "",
              "drip": false,
              "title": "",
              "titleLeft": false,
            },
          }
    }
    setRef={[Function]}
    z={0}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        null,
        <div
          className="transition-slide-up mx-auto px3 py4 form-container-width markdown-block"
          dangerouslySetInnerHTML={
                    Object {
                              "__html": "",
                            }
          }
/>,
      ],
      "className": "flex justify-center",
      "style": Object {
        "zIndex": 0,
      },
    },
    "ref": [Function],
    "rendered": Array [
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "transition-slide-up mx-auto px3 py4 form-container-width markdown-block",
          "dangerouslySetInnerHTML": Object {
            "__html": "",
          },
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          null,
          <div
            className="transition-slide-up mx-auto px3 py4 form-container-width markdown-block"
            dangerouslySetInnerHTML={
                        Object {
                                    "__html": "",
                                  }
            }
/>,
        ],
        "className": "flex justify-center",
        "style": Object {
          "zIndex": 0,
        },
      },
      "ref": [Function],
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "transition-slide-up mx-auto px3 py4 form-container-width markdown-block",
            "dangerouslySetInnerHTML": Object {
              "__html": "",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
